created fraud velocity detection logic and added it to flink workflow, created test